--- a/index.html
+++ b/index.html
@@ -1,91 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Xuzhang | Personal Website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Xuzhang | Personal Site</title>
   <style>
     * {
-      box-sizing: border-box;
-    }
-    body {
       margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9f9;
+      padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f6f8;
       color: #333;
-      display: flex;
-      min-height: 100vh;
+      line-height: 1.6;
     }
-    nav {
-      width: 250px;
+
+    header {
       background-color: #2c3e50;
-      color: #ecf0f1;
-      padding: 2rem 1rem;
-      position: fixed;
-      height: 100%;
+      color: white;
+      padding: 1rem 2rem;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
-    nav h1 {
-      font-size: 1.8rem;
-      margin-bottom: 1.5rem;
-      border-bottom: 2px solid #ecf0f1;
-      padding-bottom: 0.5rem;
+
+    header h1 {
+      font-size: 1.5rem;
     }
+
     nav a {
-      display: block;
-      color: #ecf0f1;
+      color: white;
+      margin-left: 1.5rem;
       text-decoration: none;
-      margin: 1rem 0;
-      transition: all 0.3s ease;
+      font-weight: 500;
+      transition: color 0.3s ease;
     }
+
     nav a:hover {
       color: #1abc9c;
     }
+
     main {
-      margin-left: 260px;
-      padding: 2rem;
-      flex: 1;
+      max-width: 960px;
+      margin: 2rem auto;
+      padding: 0 1rem;
     }
+
     section {
-      margin-bottom: 3rem;
+      margin-bottom: 4rem;
+      background: white;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
     }
+
     h2 {
       border-left: 4px solid #3498db;
       padding-left: 0.5rem;
       margin-bottom: 1rem;
     }
-    .project-card {
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      background: white;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+
+    .project {
+      margin-bottom: 1.5rem;
     }
+
+    .project h3 {
+      margin-bottom: 0.5rem;
+    }
+
     footer {
       text-align: center;
       color: #888;
+      padding: 2rem;
       font-size: 0.9rem;
-      margin-top: 4rem;
     }
 
-    @media (max-width: 768px) {
-      nav {
-        display: none;
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
       }
-      main {
-        margin: 0;
-        padding: 1rem;
+
+      nav a {
+        margin: 0.5rem 0 0 0;
+        display: inline-block;
       }
     }
   </style>
 </head>
 <body>
-  <nav>
+
+  <header>
     <h1>Xuzhang</h1>
-    <a href="#about">About Me</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-  </nav>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
   <main>
     <section id="about">
@@ -96,13 +115,13 @@
     <section id="projects">
       <h2>Projects</h2>
 
-      <div class="project-card">
+      <div class="project">
         <h3>iTransformer for Multivariate Forecasting</h3>
         <p>An advanced deep learning model designed for multivariate time series prediction, focused on voltage and current signal processing.</p>
         <a href="https://github.com/xuzhang0327/iTransformer-project" target="_blank">View on GitHub →</a>
       </div>
 
-      <div class="project-card">
+      <div class="project">
         <h3>Inflammatory Glaucoma Research</h3>
         <p>Clinical research based on multicenter analysis of uveitic glaucoma patients and outcomes, with data from South America and the Middle East.</p>
       </div>
@@ -113,10 +132,12 @@
       <p>Email: xuzhang0327@example.com</p>
       <p>GitHub: <a href="https://github.com/xuzhang0327" target="_blank">github.com/xuzhang0327</a></p>
     </section>
-
-    <footer>
-      &copy; 2025 Xuzhang | Built with GitHub Pages
-    </footer>
   </main>
+
+  <footer>
+    &copy; 2025 Xuzhang | Built with GitHub Pages
+  </footer>
+
 </body>
 </html>
+
