--- a/index.html
+++ b/index.html
@@ -2,43 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <title>Xuzhang | Personal Website</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Xuzhang | Personal Site</title>
   <style>
     * {
-      margin: 0;
-      padding: 0;
       box-sizing: border-box;
       scroll-behavior: smooth;
+      margin: 0;
+      padding: 0;
     }
 
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #f4f6f8;
-      color: #333;
-      line-height: 1.6;
-    }
-
-    header {
-      background-color: #2c3e50;
-      color: white;
-      padding: 1rem 2rem;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      background: #f5f6fa;
+      color: #333;
     }
 
-    header h1 {
+    nav {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 220px;
+      height: 100vh;
+      background-color: #2c3e50;
+      padding: 2rem 1rem;
+      color: white;
+    }
+
+    nav h1 {
       font-size: 1.5rem;
+      margin-bottom: 2rem;
+      border-bottom: 1px solid #7f8c8d;
+      padding-bottom: 0.5rem;
     }
 
     nav a {
+      display: block;
       color: white;
-      margin-left: 1.5rem;
       text-decoration: none;
+      margin: 1rem 0;
       font-weight: 500;
       transition: color 0.3s ease;
     }
@@ -48,14 +51,15 @@
     }
 
     main {
+      margin-left: 240px;
+      padding: 2rem;
+      width: 100%;
       max-width: 960px;
-      margin: 2rem auto;
-      padding: 0 1rem;
     }
 
     section {
-      margin-bottom: 4rem;
       background: white;
+      margin-bottom: 3rem;
       padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
@@ -67,44 +71,65 @@
       margin-bottom: 1rem;
     }
 
-    .project {
+    .project, .pub, .blog {
       margin-bottom: 1.5rem;
     }
 
-    .project h3 {
-      margin-bottom: 0.5rem;
+    .project h3, .pub h3, .blog h3 {
+      margin-bottom: 0.3rem;
+    }
+
+    .btn-resume {
+      display: inline-block;
+      background-color: #3498db;
+      color: white;
+      text-decoration: none;
+      padding: 0.5rem 1rem;
+      border-radius: 6px;
+      margin-top: 1rem;
+      transition: background-color 0.3s ease;
+    }
+
+    .btn-resume:hover {
+      background-color: #2980b9;
     }
 
     footer {
       text-align: center;
-      color: #888;
-      padding: 2rem;
+      color: #aaa;
+      margin-top: 4rem;
       font-size: 0.9rem;
     }
 
-    @media (max-width: 600px) {
-      header {
+    @media (max-width: 768px) {
+      nav {
+        position: static;
+        width: 100%;
+        height: auto;
+        padding: 1rem;
+        display: flex;
         flex-direction: column;
-        align-items: flex-start;
       }
 
-      nav a {
-        margin: 0.5rem 0 0 0;
-        display: inline-block;
+      main {
+        margin-left: 0;
+        padding: 1rem;
       }
     }
   </style>
 </head>
 <body>
 
-  <header>
+  <nav>
     <h1>Xuzhang</h1>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#projects">Projects</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#publications">Publications</a>
+    <a href="#blog">Blog</a>
+    <a href="#resume">Resume</a>
+    <a href="#contact">Contact</a>
+  </nav>
 
   <main>
     <section id="about">
@@ -112,19 +137,63 @@
       <p>Hello! I'm Xuzhang, a researcher passionate about AI, medicine, and data science. This site is a space to share my work, ideas, and personal projects.</p>
     </section>
 
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>Python, R, MATLAB</li>
+        <li>PyTorch, TensorFlow, Scikit-learn</li>
+        <li>Time series analysis, Signal processing</li>
+        <li>Clinical data interpretation, Ophthalmic imaging</li>
+      </ul>
+    </section>
+
     <section id="projects">
       <h2>Projects</h2>
 
       <div class="project">
         <h3>iTransformer for Multivariate Forecasting</h3>
-        <p>An advanced deep learning model designed for multivariate time series prediction, focused on voltage and current signal processing.</p>
+        <p>Deep learning model for forecasting voltage and current time series using attention mechanisms.</p>
         <a href="https://github.com/xuzhang0327/iTransformer-project" target="_blank">View on GitHub →</a>
       </div>
 
       <div class="project">
         <h3>Inflammatory Glaucoma Research</h3>
-        <p>Clinical research based on multicenter analysis of uveitic glaucoma patients and outcomes, with data from South America and the Middle East.</p>
+        <p>Multicenter study on uveitic glaucoma patients across South America and the Middle East.</p>
       </div>
+    </section>
+
+    <section id="publications">
+      <h2>Publications</h2>
+
+      <div class="pub">
+        <h3>Uveitic Glaucoma: Pathophysiology and Management</h3>
+        <p><em>Oman Journal of Ophthalmology, 2011</em></p>
+      </div>
+
+      <div class="pub">
+        <h3>Multicenter Analysis of Uveitic Glaucoma in Bogotá</h3>
+        <p><em>Eye, 2024</em></p>
+      </div>
+    </section>
+
+    <section id="blog">
+      <h2>Blog</h2>
+
+      <div class="blog">
+        <h3>Understanding dV/dt and dI/dt in Transformer Modeling</h3>
+        <p>How derivative-based features boost performance in multivariate predictions.</p>
+      </div>
+
+      <div class="blog">
+        <h3>Applying AI in Ophthalmology: Challenges and Future</h3>
+        <p>Exploring the use of AI for diagnosis and progression tracking in glaucoma.</p>
+      </div>
+    </section>
+
+    <section id="resume">
+      <h2>Resume</h2>
+      <p>You can download my full CV below:</p>
+      <a class="btn-resume" href="resume.pdf" target="_blank" download>Download PDF Resume</a>
     </section>
 
     <section id="contact">
@@ -132,12 +201,13 @@
       <p>Email: xuzhang0327@example.com</p>
       <p>GitHub: <a href="https://github.com/xuzhang0327" target="_blank">github.com/xuzhang0327</a></p>
     </section>
-  </main>
 
-  <footer>
-    &copy; 2025 Xuzhang | Built with GitHub Pages
-  </footer>
+    <footer>
+      &copy; 2025 Xuzhang | Built with GitHub Pages
+    </footer>
+  </main>
 
 </body>
 </html>
+
 
