--- a/index.html
+++ b/index.html
@@ -3,66 +3,66 @@
 <head>
   <meta charset="UTF-8" />
   <title>Xuzhang | Personal Website</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     * {
-      box-sizing: border-box;
-      scroll-behavior: smooth;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+      scroll-behavior: smooth;
     }
 
     body {
       font-family: 'Segoe UI', sans-serif;
-      display: flex;
-      background: #f5f6fa;
+      background-color: #f5f6fa;
       color: #333;
     }
 
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 220px;
-      height: 100vh;
+    header {
       background-color: #2c3e50;
-      padding: 2rem 1rem;
       color: white;
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
 
-    nav h1 {
+    .header-left {
       font-size: 1.5rem;
-      margin-bottom: 2rem;
-      border-bottom: 1px solid #7f8c8d;
-      padding-bottom: 0.5rem;
+      font-weight: bold;
     }
 
-    nav a {
-      display: block;
+    .header-right {
+      display: flex;
+      gap: 1.5rem;
+    }
+
+    .header-right a {
       color: white;
       text-decoration: none;
-      margin: 1rem 0;
       font-weight: 500;
       transition: color 0.3s ease;
     }
 
-    nav a:hover {
+    .header-right a:hover {
       color: #1abc9c;
     }
 
     main {
-      margin-left: 240px;
-      padding: 2rem;
-      width: 100%;
       max-width: 960px;
+      margin: 2rem auto;
+      padding: 0 1rem;
     }
 
     section {
+      margin-bottom: 4rem;
       background: white;
-      margin-bottom: 3rem;
       padding: 2rem;
       border-radius: 8px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.05);
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     }
 
     h2 {
@@ -71,12 +71,12 @@
       margin-bottom: 1rem;
     }
 
-    .project, .pub, .blog {
-      margin-bottom: 1.5rem;
+    ul {
+      padding-left: 1.5rem;
     }
 
-    .project h3, .pub h3, .blog h3 {
-      margin-bottom: 0.3rem;
+    .project, .pub, .blog {
+      margin-bottom: 1.5rem;
     }
 
     .btn-resume {
@@ -96,40 +96,37 @@
 
     footer {
       text-align: center;
-      color: #aaa;
-      margin-top: 4rem;
+      color: #888;
+      padding: 2rem;
       font-size: 0.9rem;
     }
 
     @media (max-width: 768px) {
-      nav {
-        position: static;
-        width: 100%;
-        height: auto;
-        padding: 1rem;
-        display: flex;
+      header {
         flex-direction: column;
+        align-items: flex-start;
       }
-
-      main {
-        margin-left: 0;
-        padding: 1rem;
+      .header-right {
+        flex-wrap: wrap;
+        gap: 1rem;
+        margin-top: 0.5rem;
       }
     }
   </style>
 </head>
 <body>
-
-  <nav>
-    <h1>Xuzhang</h1>
-    <a href="#about">About</a>
-    <a href="#skills">Skills</a>
-    <a href="#projects">Projects</a>
-    <a href="#publications">Publications</a>
-    <a href="#blog">Blog</a>
-    <a href="#resume">Resume</a>
-    <a href="#contact">Contact</a>
-  </nav>
+  <header>
+    <div class="header-left">Xuzhang</div>
+    <nav class="header-right">
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#publications">Publications</a>
+      <a href="#blog">Blog</a>
+      <a href="#resume">Resume</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
   <main>
     <section id="about">
@@ -149,13 +146,11 @@
 
     <section id="projects">
       <h2>Projects</h2>
-
       <div class="project">
         <h3>iTransformer for Multivariate Forecasting</h3>
         <p>Deep learning model for forecasting voltage and current time series using attention mechanisms.</p>
         <a href="https://github.com/xuzhang0327/iTransformer-project" target="_blank">View on GitHub →</a>
       </div>
-
       <div class="project">
         <h3>Inflammatory Glaucoma Research</h3>
         <p>Multicenter study on uveitic glaucoma patients across South America and the Middle East.</p>
@@ -164,12 +159,10 @@
 
     <section id="publications">
       <h2>Publications</h2>
-
       <div class="pub">
         <h3>Uveitic Glaucoma: Pathophysiology and Management</h3>
         <p><em>Oman Journal of Ophthalmology, 2011</em></p>
       </div>
-
       <div class="pub">
         <h3>Multicenter Analysis of Uveitic Glaucoma in Bogotá</h3>
         <p><em>Eye, 2024</em></p>
@@ -178,12 +171,10 @@
 
     <section id="blog">
       <h2>Blog</h2>
-
       <div class="blog">
         <h3>Understanding dV/dt and dI/dt in Transformer Modeling</h3>
         <p>How derivative-based features boost performance in multivariate predictions.</p>
       </div>
-
       <div class="blog">
         <h3>Applying AI in Ophthalmology: Challenges and Future</h3>
         <p>Exploring the use of AI for diagnosis and progression tracking in glaucoma.</p>
@@ -193,7 +184,7 @@
     <section id="resume">
       <h2>Resume</h2>
       <p>You can download my full CV below:</p>
-      <a class="btn-resume" href="resume.pdf" target="_blank" download>Download PDF Resume</a>
+      <a class="btn-resume" href="resume.pdf" download target="_blank">Download PDF Resume</a>
     </section>
 
     <section id="contact">
@@ -206,8 +197,6 @@
       &copy; 2025 Xuzhang | Built with GitHub Pages
     </footer>
   </main>
-
 </body>
 </html>
-
 
