--- a/index.html
+++ b/index.html
@@ -24,30 +24,33 @@
       padding: 1rem 2rem;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      gap: 2rem; /* 控制 Xuzhang 与菜单的间距 */
+      flex-wrap: wrap;
       position: sticky;
       top: 0;
       z-index: 1000;
     }
 
-    .header-left {
+    .logo {
       font-size: 1.5rem;
       font-weight: bold;
+      white-space: nowrap;
     }
 
-    .header-right {
+    nav {
       display: flex;
       gap: 1.5rem;
+      flex-wrap: wrap;
     }
 
-    .header-right a {
+    nav a {
       color: white;
       text-decoration: none;
       font-weight: 500;
       transition: color 0.3s ease;
     }
 
-    .header-right a:hover {
+    nav a:hover {
       color: #1abc9c;
     }
 
@@ -101,23 +104,24 @@
       font-size: 0.9rem;
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 600px) {
       header {
         flex-direction: column;
         align-items: flex-start;
+        gap: 0.5rem;
       }
-      .header-right {
-        flex-wrap: wrap;
+
+      nav {
         gap: 1rem;
-        margin-top: 0.5rem;
+        flex-wrap: wrap;
       }
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="header-left">Xuzhang</div>
-    <nav class="header-right">
+    <div class="logo">Xuzhang</div>
+    <nav>
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
       <a href="#projects">Projects</a>
@@ -199,4 +203,3 @@
   </main>
 </body>
 </html>
-
