--- a/index.html
+++ b/index.html
@@ -2,119 +2,58 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Xuzhang | Personal Website</title>
+  <title>Xuzhang | Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      scroll-behavior: smooth;
-    }
-
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #f5f6fa;
-      color: #333;
-    }
-
+    * { margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth; }
+    body { font-family: 'Segoe UI', sans-serif; background-color: #f5f6fa; color: #333; }
     header {
       background-color: #2c3e50;
       color: white;
       padding: 1rem 2rem;
       display: flex;
       align-items: center;
-      gap: 2rem; /* 控制 Xuzhang 与菜单的间距 */
+      gap: 2rem;
       flex-wrap: wrap;
       position: sticky;
       top: 0;
       z-index: 1000;
     }
-
-    .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-      white-space: nowrap;
-    }
-
-    nav {
-      display: flex;
-      gap: 1.5rem;
-      flex-wrap: wrap;
-    }
-
+    .logo { font-size: 1.5rem; font-weight: bold; white-space: nowrap; }
+    nav { display: flex; gap: 1.5rem; flex-wrap: wrap; }
     nav a {
       color: white;
       text-decoration: none;
       font-weight: 500;
       transition: color 0.3s ease;
     }
-
-    nav a:hover {
-      color: #1abc9c;
-    }
-
+    nav a:hover { color: #1abc9c; }
     main {
       max-width: 960px;
       margin: 2rem auto;
       padding: 0 1rem;
     }
-
     section {
-      margin-bottom: 4rem;
       background: white;
+      margin-bottom: 4rem;
       padding: 2rem;
       border-radius: 8px;
       box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
     }
-
     h2 {
       border-left: 4px solid #3498db;
       padding-left: 0.5rem;
       margin-bottom: 1rem;
     }
-
-    ul {
-      padding-left: 1.5rem;
-    }
-
-    .project, .pub, .blog {
-      margin-bottom: 1.5rem;
-    }
-
-    .btn-resume {
-      display: inline-block;
-      background-color: #3498db;
-      color: white;
-      text-decoration: none;
-      padding: 0.5rem 1rem;
-      border-radius: 6px;
-      margin-top: 1rem;
-      transition: background-color 0.3s ease;
-    }
-
-    .btn-resume:hover {
-      background-color: #2980b9;
-    }
-
     footer {
       text-align: center;
       color: #888;
       padding: 2rem;
       font-size: 0.9rem;
     }
-
     @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 0.5rem;
-      }
-
-      nav {
-        gap: 1rem;
-        flex-wrap: wrap;
-      }
+      header { flex-direction: column; align-items: flex-start; gap: 0.5rem; }
+      nav { gap: 1rem; flex-wrap: wrap; }
     }
   </style>
 </head>
@@ -122,84 +61,21 @@
   <header>
     <div class="logo">Xuzhang</div>
     <nav>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#publications">Publications</a>
-      <a href="#blog">Blog</a>
-      <a href="#resume">Resume</a>
-      <a href="#contact">Contact</a>
+      <a href="index.html">Home</a>
+      <a href="skills.html">Skills</a>
+      <a href="projects.html">Projects</a>
+      <a href="publications.html">Publications</a>
+      <a href="blog.html">Blog</a>
+      <a href="resume.pdf" download>Resume</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
-
   <main>
-    <section id="about">
+    <section>
       <h2>About Me</h2>
       <p>Hello! I'm Xuzhang, a researcher passionate about AI, medicine, and data science. This site is a space to share my work, ideas, and personal projects.</p>
     </section>
-
-    <section id="skills">
-      <h2>Skills</h2>
-      <ul>
-        <li>Python, R, MATLAB</li>
-        <li>PyTorch, TensorFlow, Scikit-learn</li>
-        <li>Time series analysis, Signal processing</li>
-        <li>Clinical data interpretation, Ophthalmic imaging</li>
-      </ul>
-    </section>
-
-    <section id="projects">
-      <h2>Projects</h2>
-      <div class="project">
-        <h3>iTransformer for Multivariate Forecasting</h3>
-        <p>Deep learning model for forecasting voltage and current time series using attention mechanisms.</p>
-        <a href="https://github.com/xuzhang0327/iTransformer-project" target="_blank">View on GitHub →</a>
-      </div>
-      <div class="project">
-        <h3>Inflammatory Glaucoma Research</h3>
-        <p>Multicenter study on uveitic glaucoma patients across South America and the Middle East.</p>
-      </div>
-    </section>
-
-    <section id="publications">
-      <h2>Publications</h2>
-      <div class="pub">
-        <h3>Uveitic Glaucoma: Pathophysiology and Management</h3>
-        <p><em>Oman Journal of Ophthalmology, 2011</em></p>
-      </div>
-      <div class="pub">
-        <h3>Multicenter Analysis of Uveitic Glaucoma in Bogotá</h3>
-        <p><em>Eye, 2024</em></p>
-      </div>
-    </section>
-
-    <section id="blog">
-      <h2>Blog</h2>
-      <div class="blog">
-        <h3>Understanding dV/dt and dI/dt in Transformer Modeling</h3>
-        <p>How derivative-based features boost performance in multivariate predictions.</p>
-      </div>
-      <div class="blog">
-        <h3>Applying AI in Ophthalmology: Challenges and Future</h3>
-        <p>Exploring the use of AI for diagnosis and progression tracking in glaucoma.</p>
-      </div>
-    </section>
-
-    <section id="resume">
-      <h2>Resume</h2>
-      <p>You can download my full CV below:</p>
-      <a class="btn-resume" href="resume.pdf" download target="_blank">Download PDF Resume</a>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Email: xuzhang0327@example.com</p>
-      <p>GitHub: <a href="https://github.com/xuzhang0327" target="_blank">github.com/xuzhang0327</a></p>
-    </section>
-
-    <footer>
-      &copy; 2025 Xuzhang | Built with GitHub Pages
-    </footer>
   </main>
+  <footer>&copy; 2025 Xuzhang | Built with GitHub Pages</footer>
 </body>
 </html>
