--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,7 @@
       <a href="projects.html">Projects</a>
       <a href="publications.html">Publications</a>
       <a href="blog.html">Blog</a>
-      <a href="resume.pdf" download>Resume</a>
+      <a href="CV.pdf" download>CV</a>
       <a href="contact.html">Contact</a>
     </nav>
   </header>
